# Crypto

./: SH.sln  test.md
CryptoFile/: CMakeLists.txt  Makefile  README.md  build.bat  run.bat  run_demo.bat  simple_build.bat  test_sample.txt
CryptoFile/crypto_c/: aes.h  aes_fixed.c
CryptoFile/crypto_cpp/: CryptoManager.cpp  CryptoManager.h
CryptoFile/gui_csharp/: App.xaml  App.xaml.cs  CryptoFileGUI.csproj  MainWindow.xaml  MainWindow.xaml.cs
